--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      </div>
  </section>
  <!-------------------------------------------------SECTION contenido -->
- <section class="contenido">
+ <section class="container">
     <div><h4>About Me</h4></div>
      <div class="container">
          <div class="row">
@@ -90,5 +90,16 @@
          </div>
      </div>
  </section>
+ <!-------------------------------------------------FOOTER------>
+ <footer>
+    <h4>Contact Me</h4>
+     <div class="container">
+        <div class="item">
+         <img src="images/twitter.png" alt="">
+         <img src="images/facebook.png" alt="">
+         <img src="images/linkedin.png" lt="">
+        </div>
+     </div>
+ </footer>
   </body>
 </html>
