--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Oswald'>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="favicon.ico">
     <!-- Inserta tu código aqui -->
   </head>
   <body>
